= Changes with possible impact on caller project

* log artifacts are now in generic `artifacts/` directory rather than
  in `oelogs/`