@@ -12,14 +12,17 @@
 # - BASEGEN_ALLOWED_BRANCHES (optional): space-separated list of branches allowed to contribute
 #   to a "base" (ie. without "+<suffix>"), to avoid accidental sstate polution (default empty,
 #   meaning "no restriction")
+# - MKCONF_OPTS (optional): extra options for `mkconf`
 # needs platform variables:
 # - BRANCHPREFIX_ARCH: for conf template directory and buildhistory branch prefix
 # - UPDATE_ARCH: used to separate feeds for different architectures
 
 .oe_setup:
+  variables:
+    MKCONF_OPTS: ""
   before_script:
     - BASEBRANCHNAME="${CI_COMMIT_REF_NAME#${BRANCHPREFIX_ARCH}/}"
-    - ./ci/mkconf --dir "${B}" --sstate-gen "${BUILD_GEN}" --download-dir "${HOME}/downloads-${POKY_BASE}" --template-conf "$PWD/conf-${BRANCHPREFIX_ARCH}" --buildhistory-repo "$BUILDHISTREPO" --buildhistory-ref "${BRANCHPREFIX_ARCH}/$BASEBRANCHNAME" --prserv "$PRSERV" --basegen-allowed-branches "$BASEGEN_ALLOWED_BRANCHES"
+    - ./ci/mkconf --dir "${B}" --sstate-gen "${BUILD_GEN}" --download-dir "${HOME}/downloads-${POKY_BASE}" --template-conf "$PWD/conf-${BRANCHPREFIX_ARCH}" --buildhistory-repo "$BUILDHISTREPO" --buildhistory-ref "${BRANCHPREFIX_ARCH}/$BASEBRANCHNAME" --prserv "$PRSERV" --basegen-allowed-branches "$BASEGEN_ALLOWED_BRANCHES" ${MKCONF_OPTS}
 
 .oe_deploy:
   after_script:
